# Team-238-Project-CRM

./: .gitignore  README.md
backend/: .dockerignore  .env.prod.sample  .env.sample  .gitignore  Dockerfile  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_auth_tables.py  0002_align_users_with_project_schema.py  0003_create_doctors_profiles.py  0004_normalize_doctor_employment_type.py  28cd672bb90f_add_patient_source_and_appointment_.py  9c703e4a4992_create_patients_and_appointments_tables.py  b7f2c8a1d9e0_merge_doctor_and_patient_heads.py
backend/app/: models_patient.py
backend/commands/: run_migration.sh  run_web_server_dev.sh  run_web_server_prod.sh  setup_minio.sh
backend/docker/minio_mc/: Dockerfile
backend/src/: create_initial_admin.py  main.py
backend/src/config/: __init__.py  dependencies.py  settings.py
backend/src/database/: __init__.py  populate.py  session_postgresql.py  sync_session.py
backend/src/exceptions/: __init__.py  auth.py  doctors.py  security.py  storage.py
backend/src/notifications/: __init__.py  emails.py  interfaces.py
backend/src/repositories/: __init__.py  appointments.py  doctors.py  patients.py  users.py
backend/src/routes/: __init__.py  accounts.py  appointments.py  doctors.py  patients.py
backend/src/schemas/: __init__.py  appointments.py  doctors.py  patient.py  patients.py  users.py
backend/tests/: test_accounts_me.py  test_auth_basics.py  test_database_mappers.py  test_database_populate.py
(+133 files in other folders)
