[tool.fastapi]
entrypoint = "src.main:app"

[tool.uv]
package = false

[project]
name = "clinic-crm"
version = "0.1.0"
description = "Сlinic patient booking and management service"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "uvicorn>=0.49.0",
    "alembic>=1.18.5,<2.0.0",
    "greenlet>=3.5.3,<4.0.0",
    "psycopg[binary]>=3.3.3,<4.0.0",
    "sqlalchemy>=2.0.51,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "pydantic-settings>=2.14.2,<3.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "pwdlib[argon2]>=0.3.0,<0.4.0",
    "pyjwt>=2.12.1,<3.0.0",
    "aiosmtplib>=5.1.0,<6.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "aioboto3>=15.5.0,<16.0.0",
    "pillow>=12.2.0,<13.0.0",
    "pydantic>=2.13.4,<3.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20,<0.16.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "httpx2>=0.28.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]
